# 227felix.github.io

./: haupt-css.css  index.html  newtry.css  newtry.html  newtry.js
Aufgabe 1/: css.css  html.html
Aufgabe 2/: css.css  index.html  javascript.js
Aufgabe 3/: css.css  index.html  javascript.js
Aufgabe 4/: aufgabe 4 jquery.js  aufgabe4-css.css  aufgabe4-javascript.js  index.html
Design/: index.css  index.html  login.css  login.html  script.js  style.css
carQuiz/: add.html  current.html  index.html  settings.html  styles.css  stylesadd.css  stylescurrent.css  stylesindex.css  stylessettings.css  todo.txt
neu/: cube_game.wasm  doodle_jump.wasm  index.html
shortcuts/: shortcuts.css  shortcuts.html
timer/: indextimer.html  timer.css  timer.js
wasm_tests/: Cargo.toml  index.html  main.js  style.css
wasm_tests/pkg/: package.json  rust_wasm_hello.d.ts  rust_wasm_hello.js  rust_wasm_hello_bg.wasm  rust_wasm_hello_bg.wasm.d.ts
wasm_tests/src/: lib.rs
