[package]
name = "rust-wasm-hello"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] } # Required by image crate in WASM
base64 = "0.21"

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png", "ico"] # Add formats you want to support
